[gd_scene load_steps=12 format=1]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://menu/setting.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/red.png" type="Texture" id=3]
[ext_resource path="res://menu/exit2.png" type="Texture" id=4]
[ext_resource path="res://menu/green.png" type="Texture" id=5]
[ext_resource path="res://menu/PLAY.png" type="Texture" id=6]
[ext_resource path="res://menu/hijauanisa.png" type="Texture" id=7]
[ext_resource path="res://menu/setting.png" type="Texture" id=8]
[ext_resource path="res://bg.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]

resource/name = "set"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("menu:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("menu:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -457.878, -136.428 ), Vector2( 49.122, -136.428 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("setting:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 340.619, -129.318 ), Vector2( -460.381, -129.318 ) ] }

[sub_resource type="Animation" id=2]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton 2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.3, 0.6 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite 3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.6, 0.9 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/3/type = "value"
tracks/3/path = NodePath("TextureButton:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.9, 1.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite 2:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 1.2, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/5/type = "value"
tracks/5/path = NodePath("TextureButton 3:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 1.5, 1.8 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/6/type = "value"
tracks/6/path = NodePath("bali:visibility/opacity")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 0, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[node name="Menu" type="Node2D"]

transform/pos = Vector2( 461.373, 129.184 )
script/script = ExtResource( 1 )

[node name="setting" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 340.619, -129.318 )
z/z = 60

[node name="AnimationPlayer 2" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/set = SubResource( 1 )
playback/active = true
playback/speed = 3.0
blend_times = [  ]
autoplay = ""

[node name="menu" type="Node2D" parent="."]

transform/pos = Vector2( -457.878, -136.428 )

[node name="Sprite" type="Sprite" parent="menu"]

visibility/opacity = 0.0
transform/pos = Vector2( 459.038, 130.92 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="TextureButton 2" type="TextureButton" parent="menu"]

visibility/opacity = 0.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 61.0
margin/right = 468.0
margin/bottom = 290.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )

[node name="Sprite 3" type="Sprite" parent="menu"]

visibility/opacity = 0.0
transform/pos = Vector2( 264.364, 243.391 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="menu"]

visibility/opacity = 0.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 269.0
margin/top = 287.0
margin/right = 467.0
margin/bottom = 516.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )

[node name="Sprite 2" type="Sprite" parent="menu"]

visibility/opacity = 0.0
transform/pos = Vector2( 457.709, 355.631 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="TextureButton 3" type="TextureButton" parent="menu"]

visibility/opacity = 0.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 464.0
margin/top = 176.0
margin/right = 662.0
margin/bottom = 405.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="menu"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/mulai = SubResource( 2 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="bali" type="Sprite" parent="menu"]

transform/pos = Vector2( 394.94, 244.682 )
z/z = -65
texture = ExtResource( 9 )

[node name="white" type="Polygon2D" parent="."]

transform/pos = Vector2( -457.878, -136.428 )
z/z = -66
polygon = Vector2Array( 806.505, -2.75551, -13.495, -2.75551, -13.495, 497.245, 806.505, 497.245 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[connection signal="finished" from="AnimationPlayer 2" to="." method="_on_AnimationPlayer_2_finished"]

[connection signal="pressed" from="menu/TextureButton 2" to="." method="_on_TextureButton_2_pressed"]

[connection signal="pressed" from="menu/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="menu/TextureButton 3" to="." method="_on_TextureButton_3_pressed"]

[connection signal="finished" from="menu/AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


