extends Node2D

# class member variables go here, for example:
# var a = 2
# var b = "textvar"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	Globals.set("menu",self)




func _on_TextureButton_3_pressed():
	pass # replace with function body


func _on_TextureButton_2_pressed():
	pass # replace with function body


func _on_TextureButton_pressed():
	pass # replace with function body
